--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
     "bcryptjs": "^2.4.3",
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.5",
+    "cors": "^2.8.5",
     "debug": "~4.1.1",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "express": "~4.17.1",
+    "express-fileupload": "^1.2.1",
     "express-session": "^1.17.1",
     "http-errors": "~1.7.3",
+    "method-override": "^3.0.0",
     "mongoose": "^5.9.9",
     "morgan": "~1.10.0",
     "passport": "^0.4.1",
